fixed mobile design collapse

--- a/app/static_src/less/partials/nav.less
+++ b/app/static_src/less/partials/nav.less
@@ -895,7 +895,7 @@ span.deleteicon input {
 
 .minimum-container {
     width: 260px;
-    position: relative !important;
+    position: fixed !important;
     top: 0;
     right: 0;
 }
@@ -1095,4 +1095,12 @@ span.deleteicon input {
     td.visible-lg {
         display: table-cell !important;
     }
+}
+
+#rightNavigationWrapperMobile {
+    display: flex;
+    flex: 1;
+    right: 0;
+    top: 0;
+    position: fixed;
 }
